<resources>
    <string name="Ignore">Ignore this version</string>
    <string name="Log_in">Log in</string>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_contact_us">If you have questions, please contact</string>
    <string name="about_me">About Us</string>
    <string name="access_failed">Access failed, please exit APP and try again</string>
    <string name="access_failed_new">Access failed, please exit the application and try again.</string>
    <string name="account_already_login">Your account is logged in</string>
    <string name="account_area_invalid">Sorry, this App cannot be used in this area.</string>
    <string name="account_bind_email">Bind email</string>
    <string name="account_binding">Binding</string>
    <string name="account_blacklist">"Due to policy limitation, your area cann't log on to use, please contact the dealer."</string>
    <string name="account_change_email">Change email</string>
    <string name="account_change_phone">Change the number</string>
    <string name="account_change_pwd">Change password</string>
    <string name="account_change_the_email">Change E-mail</string>
    <string name="account_cur_column_invisible">"This program can't be watched in this area."</string>
    <string name="account_device_id">ID : %s</string>
    <string name="account_device_not_support">Your device is not compatible with this app.</string>
    <string name="account_dialog_new_user">"New user 
recommendations"</string>
    <string name="account_dialog_old_user">"Old user 
recommendations"</string>
    <string name="account_disenable">EA2-Login failed, your TV box cannot be used, please contact customer service. Customer service: %1$s</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="account_exit_app">Exit the Application</string>
    <string name="account_forbidden">Account is forbidden</string>
    <string name="account_frozen">Login failed, your account has been frozen, if you have any questions, please contact the customer service.</string>
    <string name="account_go_bind">Bind now</string>
    <string name="account_id">ID: %s</string>
    <string name="account_incorrect_account_or_password">Your password has been changed. Please log in again</string>
    <string name="account_incorrect_email">Tip: Check email format or no @suffix, directly select from back.</string>
    <string name="account_input_account">Account : </string>
    <string name="account_input_account_tip">Please enter an account number or email address</string>
    <string name="account_input_email">Input your email : </string>
    <string name="account_input_email_hint">Input your email</string>
    <string name="account_input_password">Password : </string>
    <string name="account_input_pwd_tip">Please enter your password</string>
    <string name="account_login">Login</string>
    <string name="account_login_another">Log in other accounts</string>
    <string name="account_login_failed">Login failed, please try again or contact your dealer.</string>
    <string name="account_login_timeout">Login information expired, please log in again</string>
    <string name="account_login_token_invalid">Failed to login, please try again</string>
    <string name="account_logout">Log out</string>
    <string name="account_logout_failed">Logout failed, please try again or contact your dealer.</string>
    <string name="account_not_activated">Account is not activated</string>
    <string name="account_not_suport_email">This email does not support sending verification codes, so please use a different email.</string>
    <string name="account_questions_contact">Any questions, please contact: %1$s</string>
    <string name="account_relogin">Login again</string>
    <string name="account_relogin_content">The account or password is incorrect, please login again！</string>
    <string name="account_remote_confirm_tip">Please confirm whether you operate for yourself? If not, in order to ensure the security of the account, you are advised to modify the password!</string>
    <string name="account_remote_ip">IP : </string>
    <string name="account_remote_location">Reference Location : </string>
    <string name="account_remote_login_tip">The system has detected that your account has been logged on to other devices!</string>
    <string name="account_remote_time">Time : </string>
    <string name="account_tips">Tips</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_ok">Confirm</string>
    <string name="email_binding_account"><Data>Your account: &lt;font color=#ffaa00>%s&lt;/font></Data></string>
    <string name="email_binding_close">Close</string>
    <string name="email_binding_please_remember">Please remember your account/ e-mail and password, thank you!</string>
    <string name="email_binding_success"><Data>Congratulations, your email address &lt;font color=#ffaa00>%s&lt;/font> has been successfully bound!</Data></string>
    <string name="email_reset_password_success">Successfully recovered the password, please keep your account and password safe, thank you!</string>
    <string name="exit">Exit</string>
    <string name="feedback_back_blank_screen_or_video_not_sync">When playing a video, appears black screen or video is out of sync.</string>
    <string name="feedback_back_not_play">Unable to play video (internet speed is good but keeps buffering)</string>
    <string name="feedback_back_program_content_missing">Current program content is missing.</string>
    <string name="feedback_back_program_epg_missing">Current program EPG is missing.</string>
    <string name="feedback_back_resolution_too_low">The playback quality is blurred and the resolution is too low.</string>
    <string name="feedback_others">Others.</string>
    <string name="feedback_vod_abnormal_ratio">Abnormal video ratio (compressed, stretched).</string>
    <string name="feedback_vod_abnormal_subtitle">Abnormal subtitles.</string>
    <string name="feedback_vod_audio_and_video_not_sync">Audio and video are not synchronized when you play a video.</string>
    <string name="feedback_vod_black_screen">Black screen, audio but no picture.</string>
    <string name="feedback_vod_distorted_screen">Distorted screen (mosaic, abnormal color).</string>
    <string name="feedback_vod_ec9">EC9.</string>
    <string name="feedback_vod_low_res">Low resolution.</string>
    <string name="feedback_vod_no_content">No content loading.</string>
    <string name="feedback_vod_out_of_sync">Audio and video are out of sync, no sound.</string>
    <string name="feedback_vod_repeat_play">Repeating part of content.</string>
    <string name="feedback_vod_repeated">Repeated playback.</string>
    <string name="feedback_vod_srreen_freeze">Screen freeze or still frame.</string>
    <string name="help_center">Help center</string>
    <string name="image_cache">Image cache</string>
    <string name="match_rank_d">: Losses</string>
    <string name="match_rank_dif_pts">: Goal Difference</string>
    <string name="match_rank_e">: Draws</string>
    <string name="match_rank_glossary">Glossary</string>
    <string name="match_rank_j">: Games Played</string>
    <string name="match_rank_pc">: Goals Against</string>
    <string name="match_rank_pf">: Goals For</string>
    <string name="match_rank_pts">: Points</string>
    <string name="match_rank_v">: Wins</string>
    <string name="personal_clean_cache">Clean cache</string>
    <string name="personal_confirm_pwd">Confirm Password</string>
    <string name="personal_enter_password">Password</string>
    <string name="personal_password_tips1">1.Password with 6 to 12 digits, composed only of letters and numbers</string>
    <string name="personal_password_tips2">2.Note: Do not use capital letters, spaces or special characters.</string>
    <string name="personal_please_enter_password">Please enter the password.</string>
    <string name="personal_please_enter_password_again">Please enter the password again.</string>
    <string name="personal_recorde">History</string>
    <string name="personal_setting_login_password">Set password</string>
    <string name="setting_feedback_iv_notice">Scan the QR code to send suggestions or feedback.</string>
    <string name="vod_feedback_submit">Confirm Submit</string>
    <string name="vod_feedback_tip">Select the problem you encountered, and press OK to submit the feedback</string>
    <string name="vod_menu_feedback">Feedback</string>
</resources>