<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zhy.autolayout.AutoLinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/vod_feedback_info" android:background="@drawable/bg_dialog_brasiliptv" android:layout_width="920.0px" android:layout_height="750.0px" android:layout_centerInParent="true">
        <TextView android:textSize="40.0px" android:textColor="@color/color_ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:background="@drawable/dialog_title_bg" android:layout_width="fill_parent" android:layout_height="100.0px" android:text="@string/vod_menu_feedback" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_ffffffff" android:layout_gravity="center_horizontal" android:layout_marginLeft="56.0px" android:layout_marginTop="20.0px" android:layout_marginRight="56.0px" android:text="@string/vod_feedback_tip" style="@style/base_wrap" />
        <com.module.view.AutoRadioGroup android:orientation="vertical" android:id="@id/feedback_vod_grp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="56.0px" android:layout_marginRight="56.0px" android:layout_marginBottom="20.0px">
            <RadioButton android:id="@id/fb_btn_vod_ec9" android:nextFocusUp="@id/fb_btn_vod_ec9" android:nextFocusDown="@id/fb_btn_vod_low_res" android:text="@string/feedback_vod_ec9" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_low_res" android:nextFocusUp="@id/fb_btn_vod_ec9" android:nextFocusDown="@id/fb_btn_vod_abnormal_subtitle" android:text="@string/feedback_vod_low_res" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_abnormal_subtitle" android:nextFocusUp="@id/fb_btn_vod_low_res" android:nextFocusDown="@id/fb_btn_vod_no_content" android:text="@string/feedback_vod_abnormal_subtitle" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_no_content" android:nextFocusUp="@id/fb_btn_vod_abnormal_subtitle" android:nextFocusDown="@id/fb_btn_vod_black_screen" android:text="@string/feedback_vod_no_content" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_black_screen" android:nextFocusUp="@id/fb_btn_vod_no_content" android:nextFocusDown="@id/fb_btn_vod_srreen_freeze" android:text="@string/feedback_vod_black_screen" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_srreen_freeze" android:nextFocusUp="@id/fb_btn_vod_black_screen" android:nextFocusDown="@id/fb_btn_vod_repeated" android:text="@string/feedback_vod_srreen_freeze" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_repeated" android:nextFocusUp="@id/fb_btn_vod_srreen_freeze" android:nextFocusDown="@id/fb_btn_vod_distorted_screen" android:text="@string/feedback_vod_repeated" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_distorted_screen" android:nextFocusUp="@id/fb_btn_vod_repeated" android:nextFocusDown="@id/fb_btn_vod_out_of_sync" android:text="@string/feedback_vod_distorted_screen" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_out_of_sync" android:nextFocusUp="@id/fb_btn_vod_distorted_screen" android:nextFocusDown="@id/fb_btn_vod_abnormal_ratio" android:text="@string/feedback_vod_out_of_sync" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_vod_abnormal_ratio" android:nextFocusUp="@id/fb_btn_vod_out_of_sync" android:nextFocusDown="@id/vod_feedback_submit" android:text="@string/feedback_vod_abnormal_ratio" style="@style/feedback_radio_button" />
        </com.module.view.AutoRadioGroup>
        <Button android:layout_gravity="center_horizontal" android:id="@id/vod_feedback_submit" android:nextFocusUp="@id/fb_btn_vod_abnormal_ratio" android:nextFocusDown="@id/mTvVodHelpCenter" android:layout_marginTop="8.0px" android:text="@string/vod_feedback_submit" style="@style/button_single_style" />
        <TextView android:textSize="28.0px" android:textColor="@color/text_color" android:layout_gravity="center_horizontal" android:id="@id/mTvVodHelpCenter" android:background="@drawable/sel_bg_text" android:focusable="true" android:nextFocusDown="@id/mTvVodHelpCenter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/help_center" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:background="@color/color_bg_feedback" android:layout_width="360.0px" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_toRightOf="@id/vod_feedback_info" android:layout_alignBottom="@id/vod_feedback_info">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/ivVodQrCode" android:layout_width="280.0px" android:layout_height="280.0px" android:layout_marginTop="40.0px" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_ffffffff" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="28.0px" android:layout_marginTop="20.0px" android:layout_marginRight="28.0px" android:layout_marginBottom="15.0px" android:text="@string/setting_feedback_iv_notice" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>