<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout android:layout_width="fill_parent" android:layout_height="140.0px"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="@color/color_font_main" android:gravity="center_vertical" android:paddingLeft="40.0px" android:layout_width="wrap_content" android:layout_height="138.0px" android:text="@string/match_rank_glossary" />
    <com.zhy.autolayout.AutoLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="138.0px" android:layout_marginLeft="710.0px">
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" app:descText="@string/match_rank_j" app:simplifyText="GP" />
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0px" app:descText="@string/match_rank_d" app:simplifyText="L" />
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0px" app:descText="@string/match_rank_dif_pts" app:simplifyText="GD" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="138.0px" android:layout_marginLeft="1060.0px">
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" app:descText="@string/match_rank_v" app:simplifyText="W" />
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0px" app:descText="@string/match_rank_pf" app:simplifyText="F" />
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0px" app:descText="@string/match_rank_pts" app:simplifyText="P" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="138.0px" android:layout_marginLeft="1400.0px">
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" app:descText="@string/match_rank_e" app:simplifyText="D" />
        <com.match.view.MatchRankDesc android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0px" app:descText="@string/match_rank_pc" app:simplifyText="A" />
        <com.match.view.MatchRankDesc android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0px" />
    </com.zhy.autolayout.AutoLinearLayout>
    <View android:background="@color/color_1affffff" android:layout_width="fill_parent" android:layout_height="2.0px" android:layout_marginTop="138.0px" />
</com.zhy.autolayout.AutoFrameLayout>