<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zhy.autolayout.AutoRelativeLayout android:orientation="vertical" android:id="@id/mLayoutPassword" android:background="@drawable/bg_dialog_brasiliptv" android:layout_width="950.0px" android:layout_height="769.0px">
        <TextView android:textSize="20.0sp" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@id/mTvTitle" android:background="@drawable/dialog_title_bg" android:layout_width="fill_parent" android:layout_height="100.0px" android:text="@string/personal_setting_login_password" android:layout_centerHorizontal="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/color_ffffff" android:gravity="left" android:id="@id/mTvPwdHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="58.0px" android:layout_marginTop="46.0px" android:layout_marginRight="58.0px" android:text="@string/personal_enter_password" android:layout_below="@id/mTvTitle" />
        <EditText android:id="@id/mEtPwd" android:longClickable="false" android:layout_width="fill_parent" android:layout_marginLeft="58.0px" android:layout_marginTop="20.0px" android:layout_marginRight="58.0px" android:hint="@string/personal_please_enter_password" android:layout_below="@id/mTvPwdHint" style="@style/edit_dialog_style" />
        <TextView android:textSize="14.0sp" android:textColor="@color/color_ffffff" android:gravity="left" android:id="@id/mTvConfirmPwdHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="58.0px" android:layout_marginTop="40.0px" android:layout_marginRight="58.0px" android:text="@string/personal_confirm_pwd" android:layout_below="@id/mEtPwd" />
        <EditText android:id="@id/mEtConfirmPwd" android:nextFocusDown="@id/mBtnConfirm" android:longClickable="false" android:layout_width="fill_parent" android:layout_marginLeft="58.0px" android:layout_marginTop="20.0px" android:layout_marginRight="58.0px" android:hint="@string/personal_please_enter_password_again" android:layout_below="@id/mTvConfirmPwdHint" style="@style/edit_dialog_style" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_a8a8a8" android:id="@id/mTvTips1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="58.0px" android:layout_marginTop="48.0px" android:text="@string/personal_password_tips1" android:layout_below="@id/mEtConfirmPwd" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_a8a8a8" android:id="@id/mTvTips2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="58.0px" android:layout_marginTop="28.0px" android:text="@string/personal_password_tips2" android:layout_below="@id/mTvTips1" />
        <com.zhy.autolayout.AutoLinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="48.0px" android:layout_below="@id/mTvTips2">
            <Button android:id="@id/mBtnConfirm" android:layout_width="367.0px" android:layout_height="80.0px" android:text="@string/dlg_ok" style="@style/button_double_style" />
            <Button android:id="@id/mBtnCancel" android:layout_width="367.0px" android:layout_height="80.0px" android:layout_marginLeft="62.0px" android:text="@string/dlg_cancel" style="@style/button_double_style" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoRelativeLayout android:id="@id/mLayoutSuccess" android:background="@drawable/bg_dialog_brasiliptv" android:padding="60.0px" android:visibility="gone" android:layout_width="912.0px" android:layout_height="769.0px">
        <ImageView android:layout_width="100.0px" android:layout_height="100.0px" android:layout_marginTop="20.0px" android:src="@mipmap/icon_success_smile" android:layout_centerHorizontal="true" />
        <TextView android:textSize="32.0px" android:textColor="@color/color_bbc0c4" android:id="@id/mTextSuccess" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="150.0px" android:text="@string/email_binding_success" />
        <TextView android:textSize="32.0px" android:textColor="@color/color_bbc0c4" android:id="@id/mTextAccount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/email_binding_account" android:layout_below="@id/mTextSuccess" />
        <TextView android:textSize="32.0px" android:textColor="@color/color_bbc0c4" android:id="@id/mTvRemember" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/email_binding_please_remember" android:layout_below="@id/mTextAccount" />
        <TextView android:textSize="32.0px" android:textColor="@color/color_bbc0c4" android:id="@id/mTvRetrieveSuccess" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="200.0px" android:text="@string/email_reset_password_success" />
        <Button android:id="@id/mBtnClose" android:layout_marginBottom="30.0px" android:text="@string/email_binding_close" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/button_single_style" />
    </com.zhy.autolayout.AutoRelativeLayout>
</merge>