<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:id="@id/back_feedback_info" android:background="@mipmap/bg_dialog_brasiliptv_feedback" android:layout_width="960.0px" android:layout_height="720.0px" android:layout_centerInParent="true">
        <TextView android:textSize="40.0px" android:textColor="@color/color_ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:background="@drawable/dialog_title_bg" android:layout_width="fill_parent" android:layout_height="100.0px" android:text="@string/vod_menu_feedback" />
        <TextView android:textSize="24.0px" android:textColor="@color/color_ffffffff" android:layout_gravity="center_horizontal" android:layout_marginLeft="56.0px" android:layout_marginTop="20.0px" android:layout_marginRight="56.0px" android:text="@string/vod_feedback_tip" style="@style/base_wrap" />
        <com.module.view.AutoRadioGroup android:orientation="vertical" android:id="@id/feedback_back_grp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="56.0px" android:layout_marginRight="56.0px" android:layout_marginBottom="20.0px">
            <RadioButton android:id="@id/fb_btn_back_abnormal_exit" android:nextFocusUp="@id/fb_btn_back_abnormal_exit" android:nextFocusDown="@id/fb_btn_back_blank_screen_or_video_not_sync" android:text="@string/feedback_vod_ec9" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_blank_screen_or_video_not_sync" android:nextFocusUp="@id/fb_btn_back_abnormal_exit" android:nextFocusDown="@id/fb_btn_back_audio_and_video_not_sync" android:text="@string/feedback_back_blank_screen_or_video_not_sync" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_audio_and_video_not_sync" android:nextFocusUp="@id/fb_btn_back_blank_screen_or_video_not_sync" android:nextFocusDown="@id/fb_btn_back_not_play" android:text="@string/feedback_vod_audio_and_video_not_sync" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_not_play" android:nextFocusUp="@id/fb_btn_back_audio_and_video_not_sync" android:nextFocusDown="@id/fb_btn_back_repeat_play" android:text="@string/feedback_back_not_play" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_repeat_play" android:nextFocusUp="@id/fb_btn_back_not_play" android:nextFocusDown="@id/fb_btn_back_program_content_missing" android:text="@string/feedback_vod_repeat_play" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_program_content_missing" android:nextFocusUp="@id/fb_btn_back_repeat_play" android:nextFocusDown="@id/fb_btn_back_program_epg_missing" android:text="@string/feedback_back_program_content_missing" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_program_epg_missing" android:nextFocusUp="@id/fb_btn_back_program_content_missing" android:nextFocusDown="@id/fb_btn_back_program_details_error" android:text="@string/feedback_back_program_epg_missing" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_resolution_too_low" android:nextFocusUp="@id/fb_btn_back_program_epg_missing" android:nextFocusDown="@id/fb_btn_back_others" android:text="@string/feedback_back_resolution_too_low" style="@style/feedback_radio_button" />
            <RadioButton android:id="@id/fb_btn_back_others" android:nextFocusUp="@id/fb_btn_back_program_details_error" android:nextFocusDown="@id/back_feedback_submit" android:text="@string/feedback_others" style="@style/feedback_radio_button" />
        </com.module.view.AutoRadioGroup>
        <Button android:layout_gravity="center_horizontal" android:id="@id/back_feedback_submit" android:nextFocusUp="@id/fb_btn_back_others" android:nextFocusDown="@id/mTvBackHelpCenter" android:layout_marginTop="8.0px" android:text="@string/vod_feedback_submit" style="@style/button_single_style" />
        <TextView android:textSize="28.0px" android:textColor="@color/text_color" android:layout_gravity="center_horizontal" android:id="@id/mTvBackHelpCenter" android:background="@drawable/sel_bg_text" android:focusable="true" android:nextFocusDown="@id/mTvBackHelpCenter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/help_center" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:background="@color/color_bg_feedback" android:layout_width="360.0px" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_toRightOf="@id/back_feedback_info" android:layout_alignBottom="@id/back_feedback_info">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/ivBackQrCode" android:layout_width="280.0px" android:layout_height="280.0px" android:layout_marginTop="40.0px" />
        <TextView android:textSize="28.0px" android:textColor="@color/color_ffffffff" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="28.0px" android:layout_marginTop="20.0px" android:layout_marginRight="28.0px" android:layout_marginBottom="15.0px" android:text="@string/setting_feedback_iv_notice" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>